updated aml notebooks

--- a/Manufacturing/automation/artifacts/amlnotebooks/4b Safety Incident Reports Language Translation.ipynb
+++ b/Manufacturing/automation/artifacts/amlnotebooks/4b Safety Incident Reports Language Translation.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_path = os.path.join(os.getcwd(), \"input-json-files//\")\n",
+    "local_input_path = os.path.join(os.getcwd(), \"output_json\")\n",
     "# *translated_json* will contain all the translated json files\n",
     "if (not os.path.isdir(os.getcwd()+\"/translated_json\")):\n",
     "    os.makedirs(os.getcwd()+\"/translated_json\")\n",
@@ -75,7 +75,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://Mutarjum-7q65w5v4qwqdm-sep22r2.cognitiveservices.azure.com/translator/text/v3.0/translate?api-version=3.0&to=\n",
+      "{'Ocp-Apim-Subscription-Key': 'dd1b68b1cac449b8a6164bf585323f64', 'Content-Type': 'application/json; charset=UTF-8'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Importing user defined config\n",
     "import config\n",
@@ -102,29 +111,53 @@
       "\n",
       "Original JSON\n",
       "\n",
-      "{\"Data do evento\": \"20/8/2019\", \"Localização\": \"Kyoto\", \"Empregador\": \"Wide World Importers\", \"Amputação\": \"1\", \"Parte do corpo\": \"unhas\", \"Narrativa Final\": \"Um empregado estava carregando uma peça em uma imprensa quando atuava, resultando na amputação dos dois dedos do meio esquerdo.\", \"CaseId\": \"202081080\", \"Fonte\": \"prensas\", \"Evento\": \"Preso em equipamentos ou máquinas em execução durante a operação regular\", \"Natureza\": \"amputações\", \"Hospitalização\": \"1\"}\n",
+      "{\"hospitalized\": \"1\", \"event date\": \"1/1/2015\", \"final narrative\": \"A truck driver fell approximately 4 feet while descending a tanker trailer ladder. The employee was kept overnight awaiting test results.\", \"source\": \"tractor\", \"location\": \"Stuttgart\", \"caseid\": \"202045000\", \"event\": \"Other fall to lower level less than 6 feet\", \"amputation\": \"0\", \"employer\": \"Wide World Importers\", \"part of body\": \"nonclassifiable\", \"nature\": \"traumatic injuries\", \"form url\": \"https://stcognitivesearch001.blob.core.windows.net/formupload/202045000.pdf\"}\n",
       "\n",
       "Translated JSON\n",
       "\n",
-      "{'Event Date': '8/20/2019', 'Location': 'Kyoto', 'Employer': 'Wide World Importers', 'Amputation': '1', 'Body Part': 'Nails', 'Final Narrative': 'An employee was carrying a piece in a press while acting, resulting in the amputation of the two fingers of the left middle.', 'CaseId': '202081080', 'Source': 'presses', 'Event': 'Stuck in equipment or machines running during regular operation', 'Nature': 'amputations', 'Hospitalization': '1'}\n",
+      "{'hospitalized': '1', 'event date': '1/1/2015', 'final narrative': 'A truck driver fell approximately 4 feet while descending a tanker trailer ladder. The employee was kept overnight awaiting test results.', 'source': 'tractor', 'location': 'Stuttgart', 'caseid': '202045000', 'event': 'Other fall to lower level less than 6 feet', 'amputation': '0', 'employer': 'Wide World Importers', 'part of body': 'nonclassifiable', 'nature': 'traumatic injuries', 'form url': 'https://stcognitivesearch001.blob.core.windows.net/formupload/202045000.pdf'}\n",
       "\n",
       "Original JSON\n",
       "\n",
-      "{\"Fecha del evento\": \"1/1/2015\", \"Hospitalizacion\": \"1\", \"Amputación\": \"0\", \"Evento\": \"Otros caen a un nivel inferior a menos de 6 pies\", \"Fuente\": \"tractor\", \"Naturaleza\": \"lesiones traumáticas\", \"Ubicación\": \"Stuttgart\", \"Narrativa final\": \"Un conductor de camión cayó aproximadamente 4 pies mientras bajaba la escalera de un camión cisterna. El empleado se mantuvo durante la noche esperando los resultados de la prueba.\", \"Parte del cuerpo\": \"no clasificable\", \"ID\": \"202045000\", \"Empleador\": \"Wide World Importers\"}\n",
+      "{\"hospitalized\": \"1\", \"event date\": \"1/1/2015\", \"final narrative\": \"An employee's leg was pinned between a truck and the powered pallet jack being operated. The employee was hospitalized for treatment/surgery at Navicent Health.\", \"source\": \"pallet jack- powered\", \"location\": \"Miami\", \"caseid\": \"202045001\", \"event\": \"Caught in or compressed by equipment or objects, unspecified\", \"amputation\": \"0\", \"employer\": \"Wide World Importers\", \"part of body\": \"legs\", \"nature\": \"multiple injuries\", \"form url\": \"https://stcognitivesearch001.blob.core.windows.net/formupload/202045001.pdf\"}\n",
       "\n",
       "Translated JSON\n",
       "\n",
-      "{'Date of event': '1/1/2015', 'Hospitalization': '1', 'Amputation': '0', 'Event': 'Others fall to a level below less than 6 feet', 'Source': 'tractor', 'Nature': 'traumatic injuries', 'Location': 'Stuttgart', 'Final narrative': 'A truck driver fell approximately 4 feet while lowering the ladder truck. The employee remained overnight waiting for the test results.', 'Body Part': 'Uns classifiable', 'ID': '202045000', 'Employer': 'Wide World Importers'}\n"
+      "{'hospitalized': '1', 'event date': '1/1/2015', 'final narrative': \"An employee's leg was pinned between a truck and the powered pallet jack being operated. The employee was hospitalized for treatment/surgery at Navicent Health.\", 'source': 'pallet jack- powered', 'location': 'Miami', 'caseid': '202045001', 'event': 'Caught in or compressed by equipment or objects, unspecified', 'amputation': '0', 'employer': 'Wide World Importers', 'part of body': 'legs', 'nature': 'multiple injuries', 'form url': 'https://stcognitivesearch001.blob.core.windows.net/formupload/202045001.pdf'}\n",
+      "\n",
+      "Original JSON\n",
+      "\n",
+      "{\"location\": \"Rio de Janeiro\", \"amputation\": \"0\", \"final narrative\": \"Employee sustained burns during line tie-in operations at an oil and gas site.\", \"caseid\": \"202045005\", \"part of body\": \"nonclassifiable\", \"source\": \"nonclassifiable\", \"employer\": \"Wide World Importers\", \"event\": \"Nonclassifiable\", \"hospitalized\": \"1\", \"nature\": \"burns\", \"event date\": \"1/2/2015\", \"form url\": \"https://stcognitivesearch001.blob.core.windows.net/formupload/202045005.pdf\"}\n",
+      "\n",
+      "Translated JSON\n",
+      "\n",
+      "{'location': 'Rio de Janeiro', 'amputation': '0', 'final narrative': 'Employee sustained burns during line tie-in operations at an oil and gas site.', 'caseid': '202045005', 'part of body': 'nonclassifiable', 'source': 'nonclassifiable', 'employer': 'Wide World Importers', 'event': 'Nonclassifiable', 'hospitalized': '1', 'nature': 'burns', 'event date': '1/2/2015', 'form url': 'https://stcognitivesearch001.blob.core.windows.net/formupload/202045005.pdf'}\n",
+      "\n",
+      "Original JSON\n",
+      "\n",
+      "{\"employer\": \"Wide World Importers\", \"final narrative\": \"Employee tripped on a paver and fractured her wrist, requiring hospitalization.\", \"nature\": \"fractures\", \"part of body\": \"wrists and elbows\", \"event date\": \"1/2/2015\", \"hospitalized\": \"1\", \"caseid\": \"202045016\", \"source\": \"floors\", \"location\": \"Miami\", \"amputation\": \"0\", \"event\": \"Fall on same level due to tripping on uneven surface\", \"form url\": \"https://stcognitivesearch001.blob.core.windows.net/formupload/202045016.pdf\"}\n",
+      "\n",
+      "Translated JSON\n",
+      "\n",
+      "{'employer': 'Wide World Importers', 'final narrative': 'Employee tripped on a paver and fractured her wrist, requiring hospitalization.', 'nature': 'fractures', 'part of body': 'wrists and elbows', 'event date': '1/2/2015', 'hospitalized': '1', 'caseid': '202045016', 'source': 'floors', 'location': 'Miami', 'amputation': '0', 'event': 'Fall on same level due to tripping on uneven surface', 'form url': 'https://stcognitivesearch001.blob.core.windows.net/formupload/202045016.pdf'}\n",
+      "\n",
+      "Original JSON\n",
+      "\n",
+      "{\"hospitalized\": \"1\", \"amputation\": \"0\", \"location\": \"Rio de Janeiro\", \"source\": \"ladders\", \"employer\": \"Wide World Importers\", \"event date\": \"1/3/2015\", \"nature\": \"multiple injuries\", \"final narrative\": \"Employee was installing a new cable on a home while working from a Lunar, 28 foot fiberglass extension ladder. A gust of wind made his ladder move and he felt like it was going to fall so he jumped off the ladder toward the grass to avoid the concrete patio and landed on his back.\", \"part of body\": \"spine\", \"caseid\": \"202045020\", \"event\": \"Other jump to lower level 26 to 30 feet\", \"form url\": \"https://stcognitivesearch001.blob.core.windows.net/formupload/202045020.pdf\"}\n",
+      "\n",
+      "Translated JSON\n",
+      "\n",
+      "{'hospitalized': '1', 'amputation': '0', 'location': 'Rio de Janeiro', 'source': 'ladders', 'employer': 'Wide World Importers', 'event date': '1/3/2015', 'nature': 'multiple injuries', 'final narrative': 'Employee was installing a new cable on a home while working from a Lunar, 28 foot fiberglass extension ladder. A gust of wind made his ladder move and he felt like it was going to fall so he jumped off the ladder toward the grass to avoid the concrete patio and landed on his back.', 'part of body': 'spine', 'caseid': '202045020', 'event': 'Other jump to lower level 26 to 30 feet', 'form url': 'https://stcognitivesearch001.blob.core.windows.net/formupload/202045020.pdf'}\n"
      ]
     }
    ],
    "source": [
     "# Total files in the input folder\n",
-    "files = [f for f in listdir(os.getcwd()+\"/input-json-files\") if isfile(join(os.getcwd()+\"/input-json-files\", f))]\n",
+    "files = [f for f in listdir(local_input_path) if isfile(join(local_input_path, f))]\n",
     "len(files)\n",
     "# Loop through all the JSON files and translate them one by one\n",
     "for file in files:\n",
-    "    with open(local_path+file) as f:\n",
+    "    with open(join(local_input_path,file)) as f:\n",
     "        # Reading the data from the JSON file\n",
     "        data = f.readlines()\n",
     "        data = [json.loads(line) for line in data]\n",
@@ -177,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
