--- a/Manufacturing/automation/artifacts/amlnotebooks/4a Safety Incident Reports Form Recognizer.ipynb
+++ b/Manufacturing/automation/artifacts/amlnotebooks/4a Safety Incident Reports Form Recognizer.ipynb
@@ -35,32 +35,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: azure-storage-blob==2.1.0 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (2.1.0)\n",
-      "Requirement already satisfied: azure-common>=1.1.5 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-blob==2.1.0) (1.1.25)\n",
-      "Requirement already satisfied: azure-storage-common~=2.1 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-blob==2.1.0) (2.1.0)\n",
-      "Requirement already satisfied: python-dateutil in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.8.0)\n",
-      "Requirement already satisfied: requests in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.23.0)\n",
-      "Requirement already satisfied: cryptography in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.7)\n",
-      "Requirement already satisfied: six>=1.5 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from python-dateutil->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (1.14.0)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (1.24.2)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.8)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (3.0.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2019.11.28)\n",
-      "Requirement already satisfied: cffi!=1.11.3,>=1.8 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from cryptography->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (1.12.3)\n",
-      "Requirement already satisfied: asn1crypto>=0.21.0 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from cryptography->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (1.0.1)\n",
-      "Requirement already satisfied: pycparser in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from cffi!=1.11.3,>=1.8->cryptography->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.19)\n"
-     ]
+   "metadata": {
+    "gather": {
+     "logged": 1600844220921
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Please install this specific version of azure storage blob compatible with this notebook.\n",
-    "!pip install azure-storage-blob==2.1.0\n",
+    "!pip install --quiet azure-storage-blob==2.1.0\n",
     "\n",
     "# Import the required libraries\n",
     "import json\n",
@@ -85,7 +68,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "gather": {
+     "logged": 1600844226889
+    }
+   },
    "outputs": [],
    "source": [
     "# Create local directories if they don't exist\n",
@@ -115,7 +102,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 23.7 ms, sys: 20.1 ms, total: 43.8 ms\n",
+      "Wall time: 915 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# Downloading pdf files from a container named *incidentreport* to a local folder *input_forms*\n",
@@ -125,7 +121,7 @@
     "# setting up blob storage configs\n",
     "STORAGE_ACCOUNT_NAME = config.STORAGE_ACCOUNT_NAME\n",
     "STORAGE_ACCOUNT_ACCESS_KEY = config.STORAGE_ACCOUNT_ACCESS_KEY\n",
-    "STORAGE_CONTAINER_NAME = \"incidentreport\"\n",
+    "STORAGE_CONTAINER_NAME = \"form-datasets\"\n",
     "\n",
     "# Instantiating a blob service object\n",
     "blob_service = BlockBlobService(STORAGE_ACCOUNT_NAME, STORAGE_ACCOUNT_ACCESS_KEY) \n",
@@ -133,6 +129,8 @@
     "blobs = blob_service.list_blobs(STORAGE_CONTAINER_NAME)\n",
     "# Downloading pdf files from the container *incidentreport* and storing them locally to *input_forms* folder\n",
     "for blob in blobs:\n",
+    "    if not blob.name.rsplit('.',1)[-1] == 'pdf':\n",
+    "        continue\n",
     "    # Check if the blob.name is already present in the folder input_forms. If yes then continue\n",
     "    try:\n",
     "        with open('merged_log','rb') as f:\n",
@@ -140,7 +138,8 @@
     "    except FileNotFoundError:\n",
     "        merged_files = set()\n",
     "    # If file is already processed then continue to next file\n",
-    "    if (blob.name in merged_files): \n",
+    "    if (blob.name in merged_files):\n",
+    "        print(blob.name)\n",
     "        continue\n",
     "    download_file_path = os.path.join(os.getcwd(), \"input_forms\", blob.name)\n",
     "    blob_service.get_blob_to_path(STORAGE_CONTAINER_NAME, blob.name ,download_file_path)\n",
@@ -153,11 +152,31 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "gather": {
+     "logged": 1600844418895
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['202045000.pdf',\n",
+       " '202045001.pdf',\n",
+       " '202045005.pdf',\n",
+       " '202045016.pdf',\n",
+       " '202045020.pdf']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Total number of forms to be converted to JSON\n",
-    "files = [f for f in listdir(os.getcwd()+\"/input_forms\") if isfile(join(os.getcwd()+\"/input_forms\", f))]"
+    "files = [f for f in listdir(os.getcwd()+\"/input_forms\") if isfile(join(os.getcwd()+\"/input_forms\", f))]\n",
+    "files"
    ]
   },
   {
@@ -177,9 +196,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://westus2.api.cognitive.microsoft.com\n",
+      "8535af565d934195b54dee076dd0aa3d\n",
+      "d35340be-1522-46cb-b72a-ead573d0475b\n",
+      "https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/d35340be-1522-46cb-b72a-ead573d0475b/analyze\n",
+      "resp <Response [202]>\n",
+      "POST analyze succeeded:\n",
+      "{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/d35340be-1522-46cb-b72a-ead573d0475b/analyzeresults/0256fc12-b004-4a84-ad2e-08841fdcbd4f', 'x-envoy-upstream-service-time': '69', 'apim-request-id': 'ed60a913-8f6f-4e87-b221-8cdbffe7d24b', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Wed, 23 Sep 2020 07:34:11 GMT'}\n",
+      "Analysis succeeded:\n",
+      "202045000\n",
+      "resp <Response [202]>\n",
+      "POST analyze succeeded:\n",
+      "{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/d35340be-1522-46cb-b72a-ead573d0475b/analyzeresults/41b8a0dc-b801-45e4-9fd8-1cf9e17885ad', 'x-envoy-upstream-service-time': '62', 'apim-request-id': 'eb5fa97e-e95a-49e5-bbfb-62a1a0d703e8', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Wed, 23 Sep 2020 07:34:26 GMT'}\n",
+      "Analysis succeeded:\n",
+      "202045001\n",
+      "resp <Response [202]>\n",
+      "POST analyze succeeded:\n",
+      "{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/d35340be-1522-46cb-b72a-ead573d0475b/analyzeresults/db61bf1b-7f20-49e1-a75b-470237f126d6', 'x-envoy-upstream-service-time': '87', 'apim-request-id': 'fe7ed8a2-e5ab-4488-8350-7788e601ea51', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Wed, 23 Sep 2020 07:34:42 GMT'}\n",
+      "Analysis succeeded:\n",
+      "202045005\n",
+      "resp <Response [202]>\n",
+      "POST analyze succeeded:\n",
+      "{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/d35340be-1522-46cb-b72a-ead573d0475b/analyzeresults/317a7d02-0fc5-4ba3-a073-548b3428b9d5', 'x-envoy-upstream-service-time': '57', 'apim-request-id': '13fda5e9-71ea-47f6-bc28-a9005e2fcc3b', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Wed, 23 Sep 2020 07:34:57 GMT'}\n",
+      "Analysis succeeded:\n",
+      "202045016\n",
+      "resp <Response [202]>\n",
+      "POST analyze succeeded:\n",
+      "{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/d35340be-1522-46cb-b72a-ead573d0475b/analyzeresults/0e64d489-b2fe-42d2-a41a-5b0a0a429f6e', 'x-envoy-upstream-service-time': '83', 'apim-request-id': '3172c2d8-065b-4e0a-b8be-d3a9dcd59b31', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Wed, 23 Sep 2020 07:35:12 GMT'}\n",
+      "Analysis succeeded:\n",
+      "202045020\n",
+      "CPU times: user 252 ms, sys: 35.6 ms, total: 287 ms\n",
+      "Wall time: 1min 17s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# Importing user defined config\n",
@@ -193,9 +252,10 @@
     "apim_key = config.FORM_RECOGNIZER_APIM_KEY\n",
     "print(apim_key)\n",
     "# This model is the one trained on 5 forms\n",
-    "model_id = config.FORM_RECOGNIZER_MODEL_ID\n",
+    "model_id =config.FORM_RECOGNIZER_MODEL_ID\n",
     "print(model_id)\n",
-    "post_url = endpoint + \"/formrecognizer/v2.0-preview/custom/models/%s/analyze\" % model_id\n",
+    "post_url = endpoint + \"/formrecognizer/v2.0/custom/models/%s/analyze\" % model_id\n",
+    "print(post_url)\n",
     "files = [f for f in listdir(os.getcwd()+\"/input_forms\") if isfile(join(os.getcwd()+\"/input_forms\", f))]\n",
     "params = {\"includeTextDetails\": True}\n",
     "headers = {'Content-Type': 'application/pdf', 'Ocp-Apim-Subscription-Key': apim_key}\n",
@@ -203,30 +263,34 @@
     "local_path = os.path.join(os.getcwd(), \"input_forms//\")\n",
     "output_path = os.path.join(os.getcwd(), \"output_json//\")\n",
     "\n",
+    "\n",
+    "\n",
     "for file in files:\n",
     "    try:\n",
     "        with open('json_log','rb') as l:\n",
     "            json_files = pickle.load(l)\n",
     "    except FileNotFoundError:\n",
     "        json_files = set()\n",
-    "    if (file in json_files): \n",
+    "    if (file in json_files):\n",
     "        continue\n",
     "    else:\n",
     "        with open(local_path+file, \"rb\") as f:\n",
     "            data_bytes = f.read()\n",
-    "        \n",
+    "    \n",
     "    try:\n",
     "        resp = requests.post(url = post_url, data = data_bytes, headers = headers, params = params)\n",
     "        print('resp',resp)\n",
     "        if resp.status_code != 202:\n",
     "            print(\"POST analyze failed:\\n%s\" % json.dumps(resp.json()))\n",
-    "            quit()\n",
-    "        print(\"POST analyze succeeded:\\n%s\" % resp.headers)\n",
-    "        get_url = resp.headers[\"operation-location\"]\n",
+    "#             quit()\n",
+    "            break\n",
+    "        else:  \n",
+    "            print(\"POST analyze succeeded:\\n%s\" % resp.headers)\n",
+    "            get_url = resp.headers[\"operation-location\"]\n",
     "    except Exception as e:\n",
     "        print(\"POST analyze failed:\\n%s\" % str(e))\n",
-    "        quit()\n",
-    "     \n",
+    "#         quit()\n",
+    "        break\n",
     "    n_tries = 15\n",
     "    n_try = 0\n",
     "    wait_sec = 5\n",
@@ -265,7 +329,7 @@
     "                break\n",
     "            if status == \"failed\":\n",
     "                print(\"Analysis failed:\\n%s\" % json.dumps(resp_json))\n",
-    "                quit()\n",
+    "#                 quit()\n",
     "            # Analysis still running. Wait and retry.\n",
     "            time.sleep(wait_sec)\n",
     "            n_try += 1\n",
@@ -273,7 +337,8 @@
     "        except Exception as e:\n",
     "            msg = \"GET analyze results failed:\\n%s\" % str(e)\n",
     "            print(msg)\n",
-    "            quit()"
+    "            # quit()\n",
+    "            break"
    ]
   },
   {
@@ -287,25 +352,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Total number of converted JSON\n",
-    "files = [f for f in listdir(os.getcwd()+\"/output_json\") if isfile(join(os.getcwd()+\"/output_json\", f))]"
+    "files = [f for f in listdir(os.getcwd()+\"/output_json\") if isfile(join(os.getcwd()+\"/output_json\", f))]\n",
+    "len(files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 384 µs, sys: 0 ns, total: 384 µs\n",
-      "Wall time: 390 µs\n"
+      "CPU times: user 158 µs, sys: 18 µs, total: 176 µs\n",
+      "Wall time: 180 µs\n"
      ]
     }
    ],
@@ -326,9 +403,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 19.6 ms, sys: 1.32 ms, total: 21 ms\n",
+      "Wall time: 416 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# Upload JSON files from local folder *output_json* to the container *formrecogoutput*\n",
@@ -366,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
