removing statement that throws error from english form notebook

--- a/Manufacturing/automation/artifacts/notebooks/English-forms.ipynb
+++ b/Manufacturing/automation/artifacts/notebooks/English-forms.ipynb
@@ -203,13 +203,13 @@
         "        resp = requests.post(url = post_url, data = data_bytes, headers = headers, params = params)\n",
         "        if resp.status_code != 202:\n",
         "            print(\"POST analyze failed:\\n%s\" % json.dumps(resp.json()))\n",
-        "            quit()\n",
+        "            #quit()\n",
         "        else:\n",
         "            print(\"POST analyze succeeded:\\n%s\" % resp.headers)\n",
         "            get_url = resp.headers[\"operation-location\"]\n",
         "    except Exception as e:\n",
         "        print(\"POST analyze failed:\\n%s\" % str(e))\n",
-        "        quit()\n",
+        "        #quit()\n",
         "     \n",
         "    n_tries = 15\n",
         "    n_try = 0\n",
@@ -221,7 +221,7 @@
         "            resp_json = resp.json()\n",
         "            if resp.status_code != 200:\n",
         "                print(\"GET analyze results failed:\\n%s\" % json.dumps(resp_json))\n",
-        "                quit()\n",
+        "                #quit()\n",
         "            status = resp_json[\"status\"]\n",
         "            if status == \"succeeded\":\n",
         "                print(\"Analysis succeeded:\\n%s\" % file[:-4])\n",
@@ -249,7 +249,7 @@
         "                break\n",
         "            if status == \"failed\":\n",
         "                print(\"Analysis failed:\\n%s\" % json.dumps(resp_json))\n",
-        "                quit()\n",
+        "                #quit()\n",
         "            # Analysis still running. Wait and retry.\n",
         "            time.sleep(wait_sec)\n",
         "            n_try += 1\n",
@@ -257,7 +257,7 @@
         "        except Exception as e:\n",
         "            msg = \"GET analyze results failed:\\n%s\" % str(e)\n",
         "            print(msg)\n",
-        "            quit()"
+        "            #quit()"
       ],
       "attachments": {}
     },
