Updated script and artifacts for incidentreport references.

--- a/Manufacturing/automation/artifacts/amlnotebooks/4a Safety Incident Reports Form Recognizer.ipynb
+++ b/Manufacturing/automation/artifacts/amlnotebooks/4a Safety Incident Reports Form Recognizer.ipynb
@@ -121,7 +121,7 @@
     "# setting up blob storage configs\n",
     "STORAGE_ACCOUNT_NAME = config.STORAGE_ACCOUNT_NAME\n",
     "STORAGE_ACCOUNT_ACCESS_KEY = config.STORAGE_ACCOUNT_ACCESS_KEY\n",
-    "STORAGE_CONTAINER_NAME = \"form-datasets\"\n",
+    "STORAGE_CONTAINER_NAME = \"incidentreport\"\n",
     "\n",
     "# Instantiating a blob service object\n",
     "blob_service = BlockBlobService(STORAGE_ACCOUNT_NAME, STORAGE_ACCOUNT_ACCESS_KEY) \n",
