--- a/Manufacturing/automation/artifacts/notebooks/convert_pdf_to_json.ipynb
+++ b/Manufacturing/automation/artifacts/notebooks/convert_pdf_to_json.ipynb
@@ -53,8 +53,8 @@
       "source": [
         "# Create local directories if they don't exist\n",
         "# *mfg_source* contains all the pdf files to be converted to json\n",
-        "if (not os.path.isdir(os.getcwd()+\"/form-datasets\")):\n",
-        "    os.makedirs(os.getcwd()+\"/form-datasets\")\n",
+        "if (not os.path.isdir(os.getcwd()+\"/incidentreport\")):\n",
+        "    os.makedirs(os.getcwd()+\"/incidentreport\")\n",
         "# *formrecogoutput* will contain all the converted json files\n",
         "if (not os.path.isdir(os.getcwd()+\"/formrecogoutput\")):\n",
         "    os.makedirs(os.getcwd()+\"/formrecogoutput\")"
@@ -92,7 +92,7 @@
         "# Set up configs for blob storage\n",
         "STORAGE_ACCOUNT_NAME = \"#STORAGE_ACCOUNT_NAME#\"\n",
         "STORAGE_ACCOUNT_ACCESS_KEY = \"#STORAGE_ACCOUNT_KEY#\"\n",
-        "STORAGE_CONTAINER_NAME = \"form-datasets\"\n",
+        "STORAGE_CONTAINER_NAME = \"incidentreport\"\n",
         "\n",
         "# Instantiating a blob service object\n",
         "blob_service = BlockBlobService(STORAGE_ACCOUNT_NAME, STORAGE_ACCOUNT_ACCESS_KEY) \n",
@@ -111,7 +111,7 @@
         "    # If file is already processed then continue to next file\n",
         "    if (blob.name in merged_files): \n",
         "        continue\n",
-        "    download_file_path = os.path.join(os.getcwd(), \"form-datasets\", blob.name)\n",
+        "    download_file_path = os.path.join(os.getcwd(), \"incidentreport\", blob.name)\n",
         "    blob_service.get_blob_to_path(STORAGE_CONTAINER_NAME, blob.name ,download_file_path)\n",
         "    merged_files.add(blob.name)\n",
         "    # Keep trace of all the processed files at the end of your script (to keep track later)\n",
@@ -136,7 +136,7 @@
       "metadata": {},
       "source": [
         "# Total number of forms to be converted to JSON\n",
-        "files = [f for f in listdir(os.getcwd()+\"/form-datasets\") if isfile(join(os.getcwd()+\"/form-datasets\", f))]\n",
+        "files = [f for f in listdir(os.getcwd()+\"/incidentreport\") if isfile(join(os.getcwd()+\"/incidentreport\", f))]\n",
         "len(files)"
       ],
       "attachments": {}
@@ -181,7 +181,7 @@
         "params = {\"includeTextDetails\": True}\n",
         "headers = {'Content-Type': 'application/pdf', 'Ocp-Apim-Subscription-Key': apim_key}\n",
         "\n",
-        "local_path = os.path.join(os.getcwd(), \"form-datasets//\")\n",
+        "local_path = os.path.join(os.getcwd(), \"incidentreport//\")\n",
         "output_path = os.path.join(os.getcwd(), \"formrecogoutput//\")\n",
         "files = [f for f in listdir(local_path) if isfile(join(local_path, f))]\n",
         "\n",
@@ -235,7 +235,7 @@
         "                        key = i.replace(\" \", \"_\")\n",
         "                        new_dict[key] = None\n",
         "                # Appending form url to json\n",
-        "                new_dict['form_url'] = 'https://#STORAGE_ACCOUNT_NAME#.blob.core.windows.net/form-datasets/' + file \n",
+        "                new_dict['form_url'] = 'https://#STORAGE_ACCOUNT_NAME#.blob.core.windows.net/incidentreport/' + file \n",
         "                with open(join(output_path,file[:-4]+\".json\"), 'w') as outfile:\n",
         "                    json.dump(new_dict, outfile)\n",
         "                # Change the encoding of file in case of spanish forms. It will detected random characters\n",
