updated notebook to avoid reprocessing forms

--- a/Manufacturing/automation/artifacts/notebooks/convert_pdf_to_json.ipynb
+++ b/Manufacturing/automation/artifacts/notebooks/convert_pdf_to_json.ipynb
@@ -1,9 +1,9 @@
 {
   "metadata": {
+    "saveOutput": true,
     "language_info": {
       "name": "python"
-    },
-    "sessionKeepAliveTimeout": 30
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 2,
@@ -77,10 +77,10 @@
       "execution_count": 3,
       "outputs": [
         {
-          "execution_count": 6,
           "output_type": "execute_result",
+          "execution_count": 6,
           "data": {
-            "text/plain": "CPU times: user 46.9 ms, sys: 3.82 ms, total: 50.7 ms\nWall time: 269 ms"
+            "text/plain": "<azure.storage.blob.models.Blob object at 0x7ff81cfd6b00>"
           },
           "metadata": {}
         }
@@ -93,9 +93,15 @@
         "STORAGE_ACCOUNT_NAME = \"#STORAGE_ACCOUNT_NAME#\"\n",
         "STORAGE_ACCOUNT_ACCESS_KEY = \"#STORAGE_ACCOUNT_KEY#\"\n",
         "STORAGE_CONTAINER_NAME = \"incidentreport\"\n",
+        "STORAGE_LOG_CONTAINER=\"formrecoglog\"\n",
         "\n",
         "# Instantiating a blob service object\n",
         "blob_service = BlockBlobService(STORAGE_ACCOUNT_NAME, STORAGE_ACCOUNT_ACCESS_KEY) \n",
+        "\n",
+        "# Download the log files used for tracking the processing of forms\n",
+        "log_blobs = blob_service.list_blobs(STORAGE_LOG_CONTAINER)\n",
+        "for blob in log_blobs:\n",
+        "    blob_service.get_blob_to_path(STORAGE_LOG_CONTAINER,blob.name,os.path.join(os.getcwd(), blob.name))\n",
         "\n",
         "blobs = blob_service.list_blobs(STORAGE_CONTAINER_NAME)\n",
         "# Downloading pdf files from the container *form-dataset** and storing them locally to *form-dataset** folder\n",
@@ -125,10 +131,10 @@
       "execution_count": 4,
       "outputs": [
         {
-          "execution_count": 7,
           "output_type": "execute_result",
+          "execution_count": 7,
           "data": {
-            "text/plain": "5"
+            "text/plain": "1"
           },
           "metadata": {}
         }
@@ -159,10 +165,10 @@
       "execution_count": 5,
       "outputs": [
         {
-          "execution_count": 8,
           "output_type": "execute_result",
+          "execution_count": 8,
           "data": {
-            "text/plain": "POST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/543aa8a8-639f-436d-bc0a-eecf12d99f81/analyzeresults/313c2338-3876-448d-9c1f-fb5cc0bfd1b8', 'x-envoy-upstream-service-time': '73', 'apim-request-id': 'f4dd6609-053c-4c4e-974a-8759be0bfe1e', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Fri, 18 Sep 2020 14:55:38 GMT'}\nAnalysis succeeded:\n202045001\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/543aa8a8-639f-436d-bc0a-eecf12d99f81/analyzeresults/bbcf976b-8ebc-42b4-82ff-1e4a2a303553', 'x-envoy-upstream-service-time': '54', 'apim-request-id': 'eb874040-6550-4e8b-8da0-d919bf68d38e', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Fri, 18 Sep 2020 14:55:53 GMT'}\nAnalysis succeeded:\n202045000\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/543aa8a8-639f-436d-bc0a-eecf12d99f81/analyzeresults/4e22ec84-0e26-4a49-9ab2-ec5b757b784c', 'x-envoy-upstream-service-time': '64', 'apim-request-id': 'fb12b626-50bd-429f-ab6f-5a671fd70660', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Fri, 18 Sep 2020 14:56:08 GMT'}\nAnalysis succeeded:\n202045020\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/543aa8a8-639f-436d-bc0a-eecf12d99f81/analyzeresults/11b6c739-2257-47e0-b83f-fb4fd6e29c39', 'x-envoy-upstream-service-time': '63', 'apim-request-id': 'd00baf52-54fd-4805-bd85-1bde1dfd2dda', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Fri, 18 Sep 2020 14:56:23 GMT'}\nAnalysis succeeded:\n202045016\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/543aa8a8-639f-436d-bc0a-eecf12d99f81/analyzeresults/8f8df90d-ad1c-4dc2-9564-e72c5979a078', 'x-envoy-upstream-service-time': '67', 'apim-request-id': 'c0fed919-6529-4953-a1d0-b86cf1085258', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Fri, 18 Sep 2020 14:56:39 GMT'}\nAnalysis succeeded:\n202045005\nCPU times: user 398 ms, sys: 7.79 ms, total: 406 ms\nWall time: 1min 16s"
+            "text/plain": "POST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/a002139f-7f8f-403b-b864-6ecfc692c16f/analyzeresults/18d84eee-e167-4644-929d-1da0728287f9', 'x-envoy-upstream-service-time': '62', 'apim-request-id': '88f06ed2-2edb-482f-b6f8-bdbd6cd2e302', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Fri, 25 Sep 2020 23:29:47 GMT'}\nAnalysis succeeded:\n212045000"
           },
           "metadata": {}
         }
@@ -275,10 +281,10 @@
       "execution_count": 6,
       "outputs": [
         {
-          "execution_count": 9,
           "output_type": "execute_result",
+          "execution_count": 9,
           "data": {
-            "text/plain": "5"
+            "text/plain": "1"
           },
           "metadata": {}
         }
@@ -294,16 +300,7 @@
     {
       "cell_type": "code",
       "execution_count": 7,
-      "outputs": [
-        {
-          "execution_count": 10,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "CPU times: user 294 us, sys: 47 us, total: 341 us\nWall time: 350 us"
-          },
-          "metadata": {}
-        }
-      ],
+      "outputs": [],
       "metadata": {},
       "source": [
         "# %%time\n",
@@ -323,10 +320,10 @@
       "execution_count": 8,
       "outputs": [
         {
-          "execution_count": 11,
           "output_type": "execute_result",
+          "execution_count": 11,
           "data": {
-            "text/plain": "/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600429513143_0014/container_1600429513143_0014_01_000001/formrecogoutput\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600429513143_0014/container_1600429513143_0014_01_000001/formrecogoutput/202045001.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600429513143_0014/container_1600429513143_0014_01_000001/formrecogoutput/202045016.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600429513143_0014/container_1600429513143_0014_01_000001/formrecogoutput/202045000.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600429513143_0014/container_1600429513143_0014_01_000001/formrecogoutput/202045005.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600429513143_0014/container_1600429513143_0014_01_000001/formrecogoutput/202045020.json\nCPU times: user 33 ms, sys: 0 ns, total: 33 ms\nWall time: 232 ms"
+            "text/plain": "/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1601072998832_0005/container_1601072998832_0005_01_000001/formrecogoutput\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1601072998832_0005/container_1601072998832_0005_01_000001/formrecogoutput/212045000.json\n<azure.storage.blob.models.ResourceProperties object at 0x7ff81c8c7828>"
           },
           "metadata": {}
         }
@@ -346,10 +343,21 @@
     {
       "cell_type": "code",
       "execution_count": 9,
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 12,
+          "data": {
+            "text/plain": "<azure.storage.blob.models.ResourceProperties object at 0x7ff81c8c7588>"
+          },
+          "metadata": {}
+        }
+      ],
       "metadata": {},
       "source": [
-        ""
+        "# Upload the log files used for tracking form processing to blob container\n",
+        "blob_service.create_blob_from_path(STORAGE_LOG_CONTAINER,\"merged_log\",os.path.join(os.getcwd(), \"merged_log\"))\n",
+        "blob_service.create_blob_from_path(STORAGE_LOG_CONTAINER,\"json_log\",os.path.join(os.getcwd(), \"json_log\"))"
       ],
       "attachments": {}
     }
