--- a/Manufacturing/automation/artifacts/amlnotebooks/1b Predictive Maintenance AutoML Model Training and Deploy.ipynb
+++ b/Manufacturing/automation/artifacts/amlnotebooks/1b Predictive Maintenance AutoML Model Training and Deploy.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azureml.core import \n",
+    "from azureml.core import Workspace \n",
     "\n",
     "# Importing user defined config\n",
     "import config\n",
