--- a/Manufacturing/automation/artifacts/notebooks/convert_pdf_to_json.ipynb
+++ b/Manufacturing/automation/artifacts/notebooks/convert_pdf_to_json.ipynb
@@ -356,8 +356,8 @@
       "metadata": {},
       "source": [
         "# Upload the log files used for tracking form processing to blob container\n",
-        "blob_service.create_blob_from_path(STORAGE_LOG_CONTAINER,\"merged_log\",os.path.join(os.getcwd(), \"merged_log\"))\n",
-        "blob_service.create_blob_from_path(STORAGE_LOG_CONTAINER,\"json_log\",os.path.join(os.getcwd(), \"json_log\"))"
+        "#blob_service.create_blob_from_path(STORAGE_LOG_CONTAINER,\"merged_log\",os.path.join(os.getcwd(), \"merged_log\"))\n",
+        "#blob_service.create_blob_from_path(STORAGE_LOG_CONTAINER,\"json_log\",os.path.join(os.getcwd(), \"json_log\"))"
       ],
       "attachments": {}
     }
