--- a/Manufacturing/automation/artifacts/notebooks/13 MFG_WITH_HTAP.ipynb
+++ b/Manufacturing/automation/artifacts/notebooks/13 MFG_WITH_HTAP.ipynb
@@ -26,7 +26,7 @@
         "\n",
         "# Workflow\n",
         "\n",
-        "![Image alt text](https://#DATA_LAKE_NAME#.blob.core.windows.net/mfgdemocontainer/notebook-images/htap2.png)\n",
+        "![Image alt text](https://dreamdemostorageforgen2.blob.core.windows.net/mfgdemocontainer/notebook-images/htap2.png)\n",
         "\n",
         "### Scenario\n",
         "Let's consider where we are getting telemetry data every 15 minutes from 5 machines into our Azure Cosmos DB with the following information :\n",
