--- a/Manufacturing/automation/artifacts/notebooks/14 MFG_WITHOUT_HTAP.ipynb
+++ b/Manufacturing/automation/artifacts/notebooks/14 MFG_WITHOUT_HTAP.ipynb
@@ -24,7 +24,7 @@
         "\n",
         "# Workflow\n",
         "\n",
-        "![Without HTAP workflow](https://#DATA_LAKE_NAME#.blob.core.windows.net/mfgdemocontainer/notebook-images/htap-image)\n",
+        "![Without HTAP workflow](https://dreamdemostorageforgen2.blob.core.windows.net/mfgdemocontainer/notebook-images/htap-image)\n",
         "\n",
         "### Scenario\n",
         "As explained above, the data gets dumped into Synapse SQL Server instance every night, after which we can analyze the data to derive insights.\n",
