--- a/Manufacturing/automation/artifacts/amlnotebooks/1a Predictive Maintenance Dataset Registration.ipynb
+++ b/Manufacturing/automation/artifacts/amlnotebooks/1a Predictive Maintenance Dataset Registration.ipynb
@@ -168,17 +168,6 @@
     "                                 tags= {'type': 'Mfg', 'date':'2020'},\n",
     "                                 create_new_version=False)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
-   "source": []
   }
  ],
  "metadata": {
@@ -186,9 +175,9 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6 - AzureML",
    "language": "python",
-   "name": "python3"
+   "name": "python3-azureml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -200,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
