--- a/Manufacturing/automation/artifacts/amlnotebooks/1b Predictive Maintenance AutoML Model Training and Deploy.ipynb
+++ b/Manufacturing/automation/artifacts/amlnotebooks/1b Predictive Maintenance AutoML Model Training and Deploy.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "nteract": {
+     "transient": {
+      "deleting": false
+     }
+    }
+   },
    "source": [
     "\n",
     "# Predictive Maintenance (PdM) in Manufacturing \n",
@@ -86,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azureml.core import Workspace \n",
+    "from azureml.core import Workspace\n",
     "\n",
     "# Importing user defined config\n",
     "import config\n",
@@ -99,27 +105,6 @@
     "ws = Workspace(subscription_id = subscription_id, resource_group = resource_group, workspace_name = workspace_name)\n",
     "ws.write_config()\n",
     "ws = Workspace.from_config()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Workspace.create(name='Auto-ML-2', subscription_id='49d66a68-7c00-43c3-93ae-602ee60e1eb6', resource_group='CDP-VISION-DEMO-RG')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#get existing workspace\n",
-    "ws"
    ]
   },
   {
@@ -561,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -824,12 +809,10 @@
     "from azureml.core import Environment\n",
     "from azureml.core.conda_dependencies import CondaDependencies \n",
     "\n",
-    "# conda = CondaDependencies.create(conda_packages=['numpy>=1.16.0,<=1.16.2','pandas','scikit-learn','py-xgboost<=0.80','fbprophet==0.5','psutil>=5.2.2,<6.0.0'],pip_packages=['azureml-defaults==1.0.83','azureml-train-automl-runtime==1.0.83.1','inference-schema','azureml-explain-model==1.0.83'])\n",
+    "conda = CondaDependencies.create(conda_packages=['numpy>=1.16.0,<=1.16.2','pandas','scikit-learn','py-xgboost<=0.80','fbprophet==0.5','psutil>=5.2.2,<6.0.0'],pip_packages=['azureml-defaults==1.0.83','azureml-train-automl-runtime==1.0.83.1','inference-schema','azureml-explain-model==1.0.83'])\n",
     "\n",
-    "# myenv=Environment(name=\"automlenv\")\n",
-    "# myenv.python.conda_dependencies = conda\n",
-    "\n",
-    "myenv=Environment.from_conda_specification(\"automlenv\", conda_env_file_name)"
+    "myenv=Environment(name=\"automlenv\")\n",
+    "myenv.python.conda_dependencies = conda"
    ]
   },
   {
@@ -888,32 +871,6 @@
     "                           overwrite=True)\n",
     "\n",
     "api_service.wait_for_deployment(show_output=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Checking the progress of the experiment in Azure portal\n",
-    "\n",
-    "Here the URL is retrieved by the following command."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://ml.azure.com/experiments/mfg_final_exp/runs/AutoML_de749252-6671-4c01-94da-a35dea2da072?wsid=/subscriptions/49d66a68-7c00-43c3-93ae-602ee60e1eb6/resourcegroups/CDP-VISION-DEMO-RG/workspaces/Auto-ML-2\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(local_run.get_portal_url())"
    ]
   },
   {
@@ -1027,13 +984,6 @@
     "    print(error.info())\n",
     "    print(json.loads(error.read().decode(\"utf8\", 'ignore')))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1041,9 +991,9 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6 - AzureML",
    "language": "python",
-   "name": "python3"
+   "name": "python3-azureml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1055,7 +1005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
