--- a/Manufacturing/automation/artifacts/amlnotebooks/2a Machine Anomaly Detection Dataset Registration.ipynb
+++ b/Manufacturing/automation/artifacts/amlnotebooks/2a Machine Anomaly Detection Dataset Registration.ipynb
@@ -95,12 +95,12 @@
     "\n",
     "blob_service = BlockBlobService(STORAGE_ACCOUNT_NAME, STORAGE_ACCOUNT_ACCESS_KEY) \n",
     "\n",
+    "output_file_path=os.path.join(os.getcwd(),\"data\", \"mfg_anomaly_pdm.csv\")\n",
+    "output_blob_file= \"mfg_anomaly_pdm.csv\"\n",
+    "\n",
     "# Create a project_folder if it doesn't exist\n",
     "if not os.path.isdir('anomalydata'):\n",
     " os.mkdir('anomalydata')\n",
-    "\n",
-    "output_file_path=os.path.join(os.getcwd(),\"anomalydata\", \"mfg_anomaly_pdm.csv\")\n",
-    "output_blob_file= \"mfg_anomaly_pdm.csv\"\n",
     "\n",
     "# uploading the csv to  the ADLSGen2 storage container\n",
     "blob_service.get_blob_to_path(STORAGE_CONTAINER_NAME, output_blob_file,output_file_path)\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,9 +170,9 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6 - AzureML",
    "language": "python",
-   "name": "python3"
+   "name": "python3-azureml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -184,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
