--- a/Manufacturing/automation/artifacts/amlnotebooks/2b Machine Anomaly Detection Model Training and Deployment.ipynb
+++ b/Manufacturing/automation/artifacts/amlnotebooks/2b Machine Anomaly Detection Model Training and Deployment.ipynb
@@ -523,9 +523,9 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6 - AzureML",
    "language": "python",
-   "name": "python3"
+   "name": "python3-azureml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -537,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
